--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,12 +14,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/boracay.jpg" style="width:100%;min-height:200px">
+  <img src="img/CEBU.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Boracay Beach</h2>
+  <h2>Cebu</h2>
   <p>
-    Boracay Island in the Philippines has been called the Ibiza of Asia, a honeymooner’s dream and a backpacker’s secret, but as the number of visitors increased, so too did the environmental issues. In an attempt to save the island’s ecosystem from ruin, in 2018 the island was closed for six months. Culture Trip speaks to locals about the effect the shutdown had.
+    The island of Cebu, in the central Visayas region, is considered the port to some of the best diving and snorkeling in the Philippines.
   </p>
 </div>
 
@@ -27,12 +27,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/elnido.jpg" style="width:100%;min-height:200px">
+  <img src="img/BOHOL.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>El Nido Palawan</h2>
+  <h2>Bohol</h2>
   <p>
-    You’ve probably seen photographs of the stunning limestone formations around El Nido rising majestically above the turquoise water. It is one of the most popular destinations in the Philippines and for good reason, the nearby islands and beaches are absolutely stunning. But the actual town of El Nido leaves something to be desired. The infrastructure has not yet caught up with the massive influx of tourists. Which means a lot of construction, contaminated water, questionable toilets, and high prices.
+    The island of Bohol in the Philippines' central Visayas region runs at a slower pace, and it's a destination that showcases the country's natural beauty. 
   </p>
 </div>
 
@@ -40,12 +40,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/chocolatehills.jpg" style="width:100%;min-height:200px">
+  <img src="img/Banaue.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Chocolate Hills</h2>
+  <h2>Banaue</h2>
   <p>
-    According to legends, the Chocolate Hills existed because of a weeping giant who had been disappointed in love, and the hills grew where his tears fell. In another legend, two giants went to war and lobbed boulders at each other for days. The giants eventually resolved their differences, but the mounds remained where the rocks landed.
+    The rice terraces of Banaue are one of the most striking things to see in the Philippines.
   </p>
 </div>
 
@@ -53,25 +53,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/puerto-princesa-underground-river.jpg" style="width:100%;min-height:200px">
+  <img src="img/Vigan.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Undergroud River</h2>
+  <h2>Vigan</h2>
   <p>
-    It’s not surprising at all when Palawan has been recognized as the best island in the world by international travel magazines. With its pristine beaches and breathtaking lagoons, you will never be disappointed at what’s waiting for you. One charming treasure of Palawan that truly stands out is the Puerto Princesa Subterranean River National Park.
-    </p>
-</div>
-
-</div>
-<div class="w3-row w3-margin">
-
-<div class="w3-third">
-  <img src="img/banauerice.jpg" style="width:100%;min-height:200px">
-</div>
-<div class="w3-twothird w3-container">
-  <h2>Banaue Rice Terraces</h2>
-  <p>
-    Ang Hagdan-hagdang Palayan ng Banawe (Ingles: Banaue Rice Terraces) ay mga 2000-taong gulang na mga hagdanang-taniman na nililok sa mga bulubundukin ng Ifugao sa Pilipinas ng mga ninuno ng mga katutubong mamamayanang Batad. Karaniwang tinatawag ito ng mga Pilipino bilang "Ikawalong Kahangahangang Pook sa Mundo". Tinatawag itong payew sa katutubong pananalita sa Ifugao.
+    The historical city of Vigan in the northern Philippines is one of the most charming towns to visit in the Luzon region.
   </p>
 </div>
 
@@ -79,12 +66,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/taal.jpg" style="width:100%;min-height:200px">
+  <img src="img/Davao.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Taal Volcano</h2>
+  <h2>Davao</h2>
   <p>
-    Mayon Volcano-north of Legazpi city, Albay, Bicol Mayon Volcano, also known as Mount Mayon , is an active mountain in the province of Albay , on the island of Luzon in the Philippines.
+    Davao City is the main city in the southern Philippine region of Mindanao. 
   </p>
 </div>
 
